--- a/snake/index.html
+++ b/snake/index.html
@@ -34,12 +34,12 @@
         </div>
     </div>
     <div class="btn-group">
-        <div class="up" onclick="btnClick('ArrowUp')">up</div>
+        <div class="up" onclick="btnClick('ArrowUp')">上</div>
         <div class="left-right">
-            <div class="left" onclick="btnClick('ArrowLeft')">left</div>
-            <div class="right" onclick="btnClick('ArrowRight')">right</div>
+            <div class="left" onclick="btnClick('ArrowLeft')">左</div>
+            <div class="right" onclick="btnClick('ArrowRight')">右</div>
         </div>
-        <div class="down" onclick="btnClick('ArrowDown')">down</div>
+        <div class="down" onclick="btnClick('ArrowDown')">下</div>
     </div>
 </body>
 <script>
