feat: vue3cdn方式引入的后台列表

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     }
 
     .item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 4px;
       margin: 5px;
       width: 100px;
       height: 61.8px;
-      line-height: 61.8px;
-      text-align: center;
+      font-size: 12px;
       border-radius: 4px;
       border: 1px solid #d9d9d9;
       color: #1677ff;
@@ -35,9 +38,9 @@
         贪吃蛇游戏
       </div>
     </a>
-    <a href="./snake/index.html">
+    <a href="./vue3-cdn/index.html">
       <div class="item">
-        贪吃蛇游戏
+        cdn方式引入vue3的后台列表
       </div>
     </a>
   </div>
