--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       margin: 5px;
       width: 100px;
       height: 61.8px;
+      box-sizing: border-box;
       font-size: 12px;
       border-radius: 4px;
       border: 1px solid #d9d9d9;
