feat: 自定义一个loading

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+  <h4>项目</h4>
   <div class="list-wrapper">
     <a href="./snake/index.html">
       <div class="item">
@@ -42,6 +43,14 @@
     <a href="./vue3-cdn/index.html">
       <div class="item">
         cdn方式引入vue3的后台列表
+      </div>
+    </a>
+  </div>
+  <h4>效果</h4>
+  <div class="list-wrapper">
+    <a href="./loading/index.html">
+      <div class="item">
+        自定义一个loading
       </div>
     </a>
   </div>
