feat:  三栏布局的5种方案

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         自定义一个loading
       </div>
     </a>
+    <a href="./layout/index.html">
+      <div class="item">
+        左中右三栏布局的5种方案
+      </div>
+    </a>
   </div>
 </body>
 
