--- a/index.html
+++ b/index.html
@@ -3,62 +3,162 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>欢迎来到梁永刚的个人网站 - 作品</title>
+  <meta name="keywords" content="梁永刚,liangyonggang">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>我的项目</title>
   <style>
+    body {
+      margin: 0;
+      background-color: #f4f5f5;
+    }
+
+    /* 导航 */
+    .nav {
+      background-color: #fff;
+    }
+
+    .nav-inner {
+      width: 1000px;
+      height: 52px;
+      position: relative;
+      margin: 0 auto;
+    }
+
+    /* 主区域 */
+    .wrapper {
+      width: 1000px;
+      min-height: 400px;
+      margin: 16px auto;
+      padding: 10px;
+      background-color: #fff;
+      box-sizing: border-box;
+    }
+
     .list-wrapper {
       display: flex;
+      flex-wrap: wrap;
     }
 
     .item {
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 4px;
-      margin: 5px;
+      padding: 5px;
+      margin: 6px;
       width: 100px;
       height: 61.8px;
       box-sizing: border-box;
       font-size: 12px;
-      border-radius: 4px;
-      border: 1px solid #d9d9d9;
+      font-weight: bold;
+      border-radius: 6px;
+      overflow: hidden;
       color: #1677ff;
-      box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+      box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center center;
+      position: relative;
+    }
+
+    .item .item-title {
+      z-index: 1;
+    }
+
+    .item::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background: rgba(255, 255, 255, 0.6);
     }
 
     a {
       text-decoration: none;
     }
+
+    /* 手机 */
+    @media (max-width: 1000px) {
+      .nav-inner {
+        width: 100%
+      }
+
+      .nav-inner>div {
+        left: 16px !important;
+      }
+
+      .wrapper {
+        width: 94%
+      }
+    }
   </style>
 </head>
 
 <body>
-  <h4>项目</h4>
-  <div class="list-wrapper">
-    <a href="./snake/index.html">
-      <div class="item">
-        贪吃蛇游戏
+  <nav class="nav">
+    <div class="nav-inner">
+      <div style="height: 52px; position: absolute; top: 0; left: 0;">
+        <a href="http://liangyonggang.com"
+          style="text-decoration: none; line-height: 52px; font-size: 20px; color: #363636;">
+          <img width="20" height="16" src="http://liangyonggang.com/img/icon_home.png" alt="">
+          梁永刚的个人网站
+        </a>
       </div>
-    </a>
-    <a href="./vue3-cdn/index.html">
-      <div class="item">
-        cdn方式引入vue3的后台列表
-      </div>
-    </a>
+    </div>
+  </nav>
+  <div class="wrapper">
+    <h4 style="margin-top: 0;">项目</h4>
+    <div class="list-wrapper">
+      <a href="./snake/index.html">
+        <div class="item">
+          <div class="item-title">
+            贪吃蛇游戏
+          </div>
+        </div>
+      </a>
+      <a href="https://clausliang.gitee.io/claus-ui-docs/">
+        <div class="item" style="background-image: url('http://liangyonggang.com/img/icon_component.png');">
+          <div class="item-title">
+            claus-ui
+          </div>
+        </div>
+      </a>
+      <a href="./vue3-cdn/index.html">
+        <div class="item">
+          <div class="item-title">
+            cdn方式引入vue3的后台列表
+          </div>
+        </div>
+      </a>
+      <a href="./activeResume/index.html">
+        <div class="item">
+          <div class="item-title">
+            会动的简历
+          </div>
+        </div>
+      </a>
+    </div>
+    <h4>效果</h4>
+    <div class="list-wrapper">
+      <a href="./loading/index.html">
+        <div class="item">
+          <div class="item-title">
+            自定义一个loading
+          </div>
+        </div>
+      </a>
+      <a href="./layout/index.html">
+        <div class="item">
+          <div class="item-title">
+            左中右三栏布局的5种方案
+          </div>
+        </div>
+      </a>
+    </div>
   </div>
-  <h4>效果</h4>
-  <div class="list-wrapper">
-    <a href="./loading/index.html">
-      <div class="item">
-        自定义一个loading
-      </div>
-    </a>
-    <a href="./layout/index.html">
-      <div class="item">
-        左中右三栏布局的5种方案
-      </div>
-    </a>
-  </div>
+
 </body>
 
 </html>
