feat: 调用浏览器打印

--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
           </div>
         </div>
       </a>
+      <a href="./print/index.html">
+        <div class="item">
+          <div class="item-title">
+            调用浏览器打印
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 
