feat: 全屏滚动入口

--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
           </div>
         </div>
       </a>
+      <a href="./fullPage/index.html">
+        <div class="item">
+          <div class="item-title">
+            全屏滚动
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 
