feat: 手电筒效果

--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
           </div>
         </div>
       </a>
+      <a href="./flashlight/index.html">
+        <div class="item">
+          <div class="item-title">
+            手电筒效果
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 
