--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
           </div>
         </div>
       </a>
+      <a href="./three/index.html">
+        <div class="item">
+          <div class="item-title">
+            threejs学习
+          </div>
+        </div>
+      </a>
     </div>
     <h4>效果</h4>
     <div class="list-wrapper">
