feat: 学习threejs的阴影

--- a/three/index.html
+++ b/three/index.html
@@ -60,9 +60,9 @@ scene.add(cube);
 const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
 scene.add(ambientLight);
 
-// 添加一个白色的方向光，方向光从(10, 0, 10)照向原点(10, 0, 10)
+// 添加一个白色的方向光，方向光从(10, 5, 10)照向原点
 const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-directionalLight.position.set(10, 0, 10);
+directionalLight.position.set(10, 5, 10);
 scene.add(directionalLight);
 
 // 5. 渲染
@@ -80,6 +80,30 @@ animate();
 import { OrbitControls } from "three/addons/controls/OrbitControls.js";
 const controls = new OrbitControls(camera, renderer.domElement);
 controls.update();
+
+// 阴影
+// 1. 渲染器能够渲染阴影效果
+renderer.shadowMap.enabled = true;
+// 2. 该方向会投射阴影效果
+directionalLight.castShadow = true;
+// 3. cube.castShadow = true, 表示该立方体会产生影像效果；
+cube.castShadow = true;
+
+// 4. 新建了一个平面，该平面能够接受投射过来的阴影效果
+const planeGeometry = new THREE.PlaneGeometry(20, 20);
+const planeMaterial = new THREE.MeshStandardMaterial({ color: 0xffffff });
+const planeMesh = new THREE.Mesh(planeGeometry, planeMaterial);
+planeMesh.rotation.x = -0.5 * Math.PI;
+planeMesh.position.set(0, -3, 0);
+planeMesh.receiveShadow = true;
+scene.add(planeMesh);
+
+// 5. 方向光的辅助线
+const directionalLightHelper = new THREE.DirectionalLightHelper(
+  directionalLight
+);
+scene.add(directionalLightHelper); // 辅助线
+
 
 
 </script>
