--- a/index.html
+++ b/index.html
@@ -173,7 +173,14 @@
       <a href="./fullPage/index.html">
         <div class="item">
           <div class="item-title">
-            全屏滚动
+            全屏滚动（js版）
+          </div>
+        </div>
+      </a>
+      <a href="./fullPage/index.html">
+        <div class="item">
+          <div class="item-title">
+            全屏滚动（css版）
           </div>
         </div>
       </a>
