--- a/index.html
+++ b/index.html
@@ -139,10 +139,20 @@
           </div>
         </div>
       </a>
+    </div>
+    <h4>小项目</h4>
+    <div class="list-wrapper">
       <a href="./three/index.html">
         <div class="item">
           <div class="item-title">
-            threejs学习
+            初识threejs
+          </div>
+        </div>
+      </a>
+      <a href="./three/index2.html">
+        <div class="item">
+          <div class="item-title">
+            threejs：100个正方体
           </div>
         </div>
       </a>
