--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
           </div>
         </div>
       </a>
+      <a href="./dark/dark.html">
+        <div class="item">
+          <div class="item-title">
+            自动以及手动改变主题色
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 
