--- a/index.html
+++ b/index.html
@@ -140,23 +140,7 @@
         </div>
       </a>
     </div>
-    <h4>小项目</h4>
-    <div class="list-wrapper">
-      <a href="./three/index.html">
-        <div class="item">
-          <div class="item-title">
-            初识threejs
-          </div>
-        </div>
-      </a>
-      <a href="./three/index2.html">
-        <div class="item">
-          <div class="item-title">
-            threejs：100个正方体
-          </div>
-        </div>
-      </a>
-    </div>
+    
     <h4>效果</h4>
     <div class="list-wrapper">
       <a href="./loading/index.html">
@@ -205,6 +189,38 @@
         <div class="item">
           <div class="item-title">
             自动以及手动改变主题色
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <h4>学习threeJs</h4>
+    <div class="list-wrapper">
+      <a href="./three/index.html">
+        <div class="item">
+          <div class="item-title">
+            初识threejs
+          </div>
+        </div>
+      </a>
+      <a href="./three/index2.html">
+        <div class="item">
+          <div class="item-title">
+            100个正方体
+          </div>
+        </div>
+      </a>
+      <a href="./three/index3.html">
+        <div class="item">
+          <div class="item-title">
+            gui工具的使用
+          </div>
+        </div>
+      </a>
+      <a href="./three/index4.html">
+        <div class="item">
+          <div class="item-title">
+            点、线、面
           </div>
         </div>
       </a>
