--- a/three/index.html
+++ b/three/index.html
@@ -83,12 +83,18 @@ const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
 directionalLight.position.set(10, 5, 10); 
 scene.add(directionalLight);
 
+// 7.3. 方向光的辅助线
+const directionalLightHelper = new THREE.DirectionalLightHelper(
+  directionalLight
+);
+scene.add(directionalLightHelper); // 辅助线
+
 // 8.阴影
 // 8.1. 渲染器能够渲染阴影效果
 renderer.shadowMap.enabled = true;
 // 8.2. 该方向会投射阴影效果
 directionalLight.castShadow = true;
-// 8.3. cube.castShadow = true, 表示该立方体会产生影像效果；
+// 8.3. cube.castShadow = true, 表示该立方体会产生阴影效果；
 cube.castShadow = true;
 
 // 8.4. 新建了一个平面，该平面能够接受投射过来的阴影效果
@@ -100,11 +106,7 @@ planeMesh.position.set(0, -3, 0);
 planeMesh.receiveShadow = true;
 scene.add(planeMesh);
 
-// 8.5. 方向光的辅助线
-const directionalLightHelper = new THREE.DirectionalLightHelper(
-  directionalLight
-);
-scene.add(directionalLightHelper); // 辅助线
+
 
 // 9. 浏览器缩放
 window.onresize = function(){
