--- a/three/index.html
+++ b/three/index.html
@@ -99,7 +99,7 @@ cube.castShadow = true;
 
 // 8.4. 新建了一个平面，该平面能够接受投射过来的阴影效果
 const planeGeometry = new THREE.PlaneGeometry(20, 20);
-const planeMaterial = new THREE.MeshStandardMaterial({ color: 0xffffff });
+const planeMaterial = new THREE.MeshStandardMaterial({ color: 0xffffff, side: THREE.DoubleSide });
 const planeMesh = new THREE.Mesh(planeGeometry, planeMaterial);
 planeMesh.rotation.x = -0.5 * Math.PI;
 planeMesh.position.set(0, -3, 0);
