feat: 了解几何体

--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@
           </div>
         </div>
       </a>
+      <a href="./three/index5.html">
+        <div class="item">
+          <div class="item-title">
+            构建一个几何体，定义顶点法线
+          </div>
+        </div>
+      </a>
+      <a href="./three/index6.html">
+        <div class="item">
+          <div class="item-title">
+            认识几何体的框架
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 
