--- a/index.html
+++ b/index.html
@@ -206,6 +206,27 @@
           </div>
         </div>
       </a>
+      <a href="./petiteVue/index.html">
+        <div class="item">
+          <div class="item-title">
+            petite-vue
+          </div>
+        </div>
+      </a>
+      <a href="./scrollReveal/index.html">
+        <div class="item">
+          <div class="item-title">
+            scrollReveal滚动动画
+          </div>
+        </div>
+      </a>
+      <a href="./exportword/index.html">
+        <div class="item">
+          <div class="item-title">
+            前端导出word
+          </div>
+        </div>
+      </a>
     </div>
 
     <h4>学习threeJs</h4>
