--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
         </div>
       </a>
     </div>
+    <a href="./wardrobe/index.html">
+      <h4 style="text-align: right; color: #666; font-style: oblique;">电子衣橱</h4>
+    </a>
   </div>
 
 </body>
