--- a/wardrobe/index.html
+++ b/wardrobe/index.html
@@ -109,7 +109,7 @@
       <div class="item">
         <img src="" alt="">
         <div class="item-title">
-          abc
+          def
         </div>
       </div>
       <div class="item">
